# choir-overlay

./: .gitignore  CLAUDE.md  LICENSE  README.md  meson.build
docs/superpowers/plans/: 2026-06-17-choir-discord-overlay.md  2026-06-17-choir-discord-overlay.md.tasks.json  2026-06-20-hdr-overlay-shader.md  2026-06-20-hdr-overlay-shader.md.tasks.json  2026-06-20-native-arch-packaging.md  2026-06-20-native-arch-packaging.md.tasks.json  2026-06-21-opengl-support.md  2026-06-21-opengl-support.md.tasks.json
docs/superpowers/specs/: 2026-06-17-discord-overlay-design.md  2026-06-20-hdr-overlay-shader-design.md  2026-06-20-native-arch-packaging-design.md  2026-06-21-opengl-support-design.md
packaging/: PKGBUILD  choir-run.in  choir.desktop  install-user.sh  uninstall-user.sh
packaging/aur/: .SRCINFO  PKGBUILD
src/gl/: choir_gl.version  gl_api.cpp  gl_api.hpp  gl_avatar_textures.cpp  gl_avatar_textures.hpp  gl_renderer.cpp  gl_renderer.hpp  imgui_impl_opengl3_unity.cpp  interposer.cpp  meson.build
src/host/: main.cpp  meson.build
src/host/config/: config.cpp  config.hpp  denylist.cpp  denylist.hpp
src/host/discord/: ipc_transport.cpp  ipc_transport.hpp  oauth.cpp  oauth.hpp  qt_http.cpp  qt_http.hpp  rpc_client.cpp  rpc_client.hpp  rpc_messages.cpp  rpc_messages.hpp
src/host/model/: avatar_cache.cpp  avatar_cache.hpp  overlay_state.cpp  overlay_state.hpp
src/host/server/: state_server.cpp  state_server.hpp
src/host/ui/: settings_window.cpp  settings_window.hpp  tray.cpp  tray.hpp
src/ipc/: avatar_file.cpp  avatar_file.hpp  framing.cpp  framing.hpp  meson.build  paths.cpp  paths.hpp  protocol.cpp  protocol.hpp  state.cpp  state.hpp
src/layer/: avatar_textures.cpp  avatar_textures.hpp  choir_overlay.version  dispatch.cpp  dispatch.hpp  gating.cpp  imgui_impl_vulkan_unity.cpp  imgui_renderer.cpp  imgui_renderer.hpp  imgui_vk_backend.hpp  layer_entry.cpp  meson.build  overlay_ui.cpp  overlay_ui.hpp  srgb.hpp  state_client.cpp  state_client.hpp  swapchain.cpp  swapchain.hpp  swapchain_color.hpp  swapchain_usage.hpp
src/layer/manifest/: choir_overlay.json.in
src/layer/shaders/: overlay_hdr.frag  overlay_hdr.frag.spv.h
src/overlay/: fade.hpp  gating.hpp  iavatar_textures.hpp  meson.build  overlay_ui.cpp  overlay_ui.hpp  state_client.cpp
tests/: meson.build
tests/gl/: test_gl_golden.cpp
tests/harness/: auth_spike.cpp  fake_host.cpp  test_layer_faults.cpp  test_layer_golden.cpp  test_layer_state.cpp  vk_min_present.cpp
tests/host/: test_avatar_cache.cpp  test_config.cpp  test_denylist.cpp  test_ipc_transport.cpp  test_oauth.cpp  test_overlay_state.cpp  test_rpc_client.cpp  test_rpc_messages.cpp  test_state_server.cpp
tests/ipc/: test_avatar_file.cpp  test_framing.cpp  test_paths.cpp  test_protocol.cpp  test_state.cpp
tests/layer/: test_fade.cpp  test_srgb.cpp  test_swapchain_color.cpp  test_swapchain_usage.cpp
